--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,24 +1,59 @@
 ga:
-    topk:
-        - 5
+    selection_percentage: 0.35
     mutation_prob:
-        - 0.03
-        - 0.06
-        - 0.09
+#       - 0.01
+#       - 0.02
+        - 0.035
+#       - 0.04
+#       - 0.05
+#       - 0.06
+#       - 0.07
+#       - 0.08
+#       - 0.09
+#       - 0.10
+#       - 0.11
+#       - 0.12
+#       - 0.13
+#       - 0.14
+#       - 0.15
+#       - 0.16
+#       - 0.17
+#       - 0.18
+#       - 0.19
+#       - 0.20
     crossover_prob:
-        - 0.6
+#       - 0.2
+#       - 0.3
+#       - 0.4
+        - 0.45
+#       - 0.6
+#       - 0.7
+#       - 0.8
+#       - 0.9
     population:
-        - 40
-        - 50
+        - 30
 
 extra:
-    radius: 4
+    iterations: 200
+    region: dlh
+    lats_range:
+        - 28.5504000
+        - 28.7330000
+    lons_range:
+        - 77.0423000
+        - 77.3911000
+    radius: 5
     n_circles:
-        - 7
-        - 8
-        - 9
-        - 10
-        - 11
+#       - 4
+#       - 5
+#       - 6
+#       - 7
+#       - 8
+#       - 9
+#       - 10
+#       - 11
         - 12
+#       - 13
+#       - 14
     mutation_range:
         - 0.06
